XO_Project_UAT/Project--XOGrp--UAT/src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <externalId>true</externalId>
        <label>Category Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubCategory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Category ID</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Industry</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must pick an active Industry</errorMessage>
            <filterItems>
                <field>Industry__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPLinkName__c</fullName>
        <description>SS-7669</description>
        <label>MP Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Child Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>CTGY-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_ID__c</fullName>
        <description>Taxonomy GUID (Length must be 36 characters including hyphens)</description>
        <externalId>true</externalId>
        <inlineHelpText>Taxonomy ID</inlineHelpText>
        <label>Taxonomy ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora_Description__c</fullName>
        <inlineHelpText>This field is copy of Short description and will be updated automatically if it&apos;s blank.</inlineHelpText>
        <label>Zuora Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>Active_Categories</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Parent_Category__c</columns>
        <columns>Category_Code__c</columns>
        <columns>Category_Group__c</columns>
        <columns>Category_ID__c</columns>
        <columns>Active__c</columns>
        <columns>Taxonomy_ID__c</columns>
        <columns>Zuora_Description__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Categories</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Zuora_Description__c</columns>
        <columns>Parent_Category__c</columns>
        <columns>Category_Code__c</columns>
        <columns>Category_Group__c</columns>
        <columns>Category_ID__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Category__c.Local</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Categories</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Parent_Category__c</columns>
        <columns>Category_Code__c</columns>
        <columns>Category_Group__c</columns>
        <columns>Category_ID__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Categories</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <label>Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>National</fullName>
        <active>true</active>
        <label>National</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Category_Code</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(Category_Code__c),
   FALSE,  /* do not validate if empty */
   LEN(Category_Code__c) &lt;&gt; 3  /* must be 3 characters */
  )</errorConditionFormula>
        <errorDisplayField>Category_Code__c</errorDisplayField>
        <errorMessage>Category Code must be 3 characters long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Category_ID</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(Category_ID__c),
   FALSE,  /* do not validate if empty */
   OR(
      LEN(Category_ID__c) &lt;&gt; 3,  /* must be 3 characters */
      NOT(ISNUMBER(Category_ID__c))  /* must be numeric */
     )
  )</errorConditionFormula>
        <errorDisplayField>Category_ID__c</errorDisplayField>
        <errorMessage>Category ID must be 3 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Subcategory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Category_Group__c, &apos;SubCategory&apos;), ISBLANK( Parent_Category__c))</errorConditionFormula>
        <errorDisplayField>Parent_Category__c</errorDisplayField>
        <errorMessage>SubCategories require a Parent Category</errorMessage>
    </validationRules>
</CustomObject>